update todo counters

--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
       </div>
     </div>
 
-    <script>
-    	// JavaScript code comes here...
-    </script>
-
-    </body>
-  </html>
+    <script src="main.js"></script>
+  </body>
+</html>
