added removal func

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>TodoList</h1>
 
-      <form>
+      <form onsubmit="submitToDo(); return false;">
         <input type="text" id="new-todo" placeholder="What needs to be done?">
       </form>
 
@@ -28,7 +28,9 @@
       <div class="footer">
         Todo: <span id="todo-count">1</span> •
         Done: <span id="completed-count">0</span> •
-        Total: <span id="total-count">1</span>
+        Total: <span id="total-count">1</span> •
+        <a href="#" onclick="cleanUpDoneTodos(); return false">Clean up</a>
+
       </div>
     </div>
 
